# code_stats

./: .gitignore  CLAUDE.md  README.md  development_log.md  git_analyzer.py  git_stats.db  git_stats.py  git_utils.py  pyproject.toml  report_formatter.py  stats_parser.py  test_fullstack.py
.claude-trace/: log-2025-06-10-02-02-22.html  log-2025-06-10-02-02-22.jsonl
backend/: .env.example  README.md  requirements.txt
backend/app/: main.py  run.py
backend/app/auth/: dependencies.py  routes.py  utils.py
backend/app/core/: config.py  database.py  migration_manager.py  models.py
backend/app/repositories/: routes.py
backend/app/schemas/: auth.py  repositories.py  statistics.py
backend/app/statistics/: analyzer.py  routes.py  services.py
backend/migrations/: 001_initial_schema.sql  002_add_commits_tables.sql  003_add_commit_patch_id.sql
docs/: api-endpoints.md  api-enhancement-discussion.md  database-migration-guides.md  files-changed-column-fix.md  multi-branch-analysis.md
docs/plan/: git-pull-fetch-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: AppLayout.vue
frontend/src/composables/: useApi.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AuthorsView.vue  DashboardView.vue  LoginView.vue  RepositoriesView.vue  RepositoryStatsView.vue
