[project]
name = "code-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "celery",
    "fastapi",
    "passlib[bcrypt]",
    "pydantic-settings",
    "pydantic[email]>=2.11.5",
    "python-jose[cryptography]",
    "python-multipart",
    "redis",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]
